c2prj1_cards/grade.txt
Grading at Wed Jun 17 16:20:00 UTC 2020
Compiling cards.c
cards.c: In function ‘suit_letter’:
cards.c:56:28: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     case NUM_SUITS: return "Invalid card"; break;
                            ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
